# litecrawl

./: .gitignore  CONVENTIONS.md  PROJECT.md  README.md  RECIPE.md  example.py  pyproject.toml
.github/workflows/: workflow.yml
litecrawl/: __init__.py
litecrawl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/litecrawl/: __init__.py
tests/: conftest.py  helpers.py  test_frontier.py  test_hashing.py  test_normalize.py  test_schedule.py  test_scheduling.py  test_security.py  test_url_rules.py
