[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "litecrawl"
version = "0.1.0"
description = "Minimal asynchronous Playwright-based web crawler"
readme = "PROJECT.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
  {name = "litecrawl contributors"}
]
dependencies = [
  "playwright>=1.44.0,<1.50.0",
  "httpx>=0.27.0,<0.28.0",
  "beautifulsoup4>=4.12.3,<5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.7,<0.24.0",
  "ruff>=0.5.0,<0.6.0"
]

[tool.setuptools]
py-modules = ["litecrawl"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
