[project]
name = "litecrawl"
version = "0.1.0"
description = "Minimal asynchronous Playwright-based web crawler"
readme = "RECIPE.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "litecrawl maintainers" }]
dependencies = [
    "aiosqlite>=0.20.0",
    "lxml>=5.1.0",
    "playwright>=1.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["litecrawl"]

[tool.hatch.build.targets.sdist]
include = ["litecrawl", "RECIPE.md", "CONVENTIONS.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
